Feat(wit 16) account management (#44)
* added endpoints for changing user's account details

* Refactor(WIT-16): changed URI

* Fix(WIT-16): fix typo

* Feat(WIT-16): added tests

* Fix(WIT-13): used correct method

* Refactor(WIT-16): ran cs:fix

* Feat(WIT-16): added swagger annotations

* Feat(WIT-16): add 'avatar' column to users table

* Feat(WIT-16): added new exception

* Feat(WIT-16): added middleware

* Feat(WIT-16): added endpoint, disk,  service and controller for uploading avatars

* Feat(WIT-16): added swagger annotations

* Refactor(WIT-16): tests refactor

* Refactor(WIT-16): avatar upload refactor

* Fix(WIT-16): fixed validation rules

* Fix(WIT-16): fixed userfactory filename

* Fix(WIT-16): tests added for avatar uploading

* Refactor(WIT-16): get rid of unnecessary comments

* Feat(WIT-16): added intervention/image package

* Feat(WIT-16): added resizing avatars to 81x81

* Fix(WIT-16):  added unique index to 'avatar' column

* Feat(WIT-16): added endpoints for deleting and getting avatar

* Feat(WIT-16): added logic for deleting and getting avatar

* Refactor(WIT-16): added annotations

* Feat(WIT-16): added swagger annotations

* Feat(WIT-16): added tests for deleting and getting avatar

* Refactor(WIT-16): changed exception message

* Refactor(WIT-16): refactored avatar's upload logic

* Refactor(WIT-13): test's names changed

* Refactor(WIT-16): splitted up tests and changed their names
