# storage/api-docs/api-docs.json
@@ -18,6 +18,175 @@
                 }
             }
         },
+        "/api/v1/account/update/password": {
+            "put": {
+                "tags": [
+                    "Account Management"
+                ],
+                "summary": "Update user's account password",
+                "parameters": [
+                    {
+                        "parameter": "user_credentials_in_query_required",
+                        "name": "body",
+                        "in": "query",
+                        "description": "Data needed to perform action.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/UpdatePassword"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdatePassword"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/v1/account/update/name": {
+            "put": {
+                "tags": [
+                    "Account Management"
+                ],
+                "summary": "Update user's account name",
+                "parameters": [
+                    {
+                        "parameter": "user_credentials_in_query_required",
+                        "name": "body",
+                        "in": "query",
+                        "description": "Data needed to perform action.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/UpdateName"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateName"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/v1/account/update/email": {
+            "put": {
+                "tags": [
+                    "Account Management"
+                ],
+                "summary": "Update user's account email",
+                "parameters": [
+                    {
+                        "parameter": "user_credentials_in_query_required",
+                        "name": "body",
+                        "in": "query",
+                        "description": "Data needed to perform action.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/UpdateEmail"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/UpdateEmail"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/v1/account/avatar/upload": {
+            "post": {
+                "tags": [
+                    "Avatar Management"
+                ],
+                "summary": "Upload user's avatar",
+                "parameters": [
+                    {
+                        "parameter": "user_credentials_in_query_required",
+                        "name": "body",
+                        "in": "query",
+                        "description": "Avatar needed to perform action. Acceptable extensions: png, jpg, jpeg.",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/components/schemas/Avatar"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/Avatar"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/api/v1/account/avatar/": {
+            "get": {
+                "tags": [
+                    "Avatar Management"
+                ],
+                "summary": "Get user's avatar",
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "image": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Avatar"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/account/avatar/delete": {
+            "delete": {
+                "tags": [
+                    "Avatar Management"
+                ],
+                "summary": "Delete user's avatar",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
         "/api/v1/auth/signup": {
             "post": {
                 "tags": [
@@ -63,6 +232,54 @@
     },
     "components": {
         "schemas": {
+            "UpdatePassword": {
+                "properties": {
+                    "password": {
+                        "type": "string"
+                    },
+                    "password_confirmation": {
+                        "type": "string"
+                    }
+                },
+                "type": "object",
+                "example": {
+                    "password": "12345678",
+                    "password_confirmation": "12345678"
+                }
+            },
+            "UpdateEmail": {
+                "properties": {
+                    "email": {
+                        "type": "email|string"
+                    }
+                },
+                "type": "object",
+                "example": {
+                    "email": "test@test.com"
+                }
+            },
+            "UpdateName": {
+                "properties": {
+                    "name": {
+                        "type": "string"
+                    }
+                },
+                "type": "object",
+                "example": {
+                    "name": "JohnDoe"
+                }
+            },
+            "Avatar": {
+                "properties": {
+                    "image": {
+                        "type": "file"
+                    }
+                },
+                "type": "object",
+                "example": {
+                    "image": "file"
+                }
+            },
             "User": {
                 "properties": {
                     "name": {
